excel file conversion using pandas

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+#virtualenv
 env/
+
+#environment files
+.env
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+#excel files
+*.xlsx
